<resources>
    <string name="app_name">MyExamenFinal</string>
    <string name="mi_examen_final">MI Examen Final</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="nombre_del_marcador">Nombre del marcador</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="enviar">Enviar</string>
    <string name="maps_api_key">AIzaSyAe7MxKn28oGowRbyocI2AabLOGpLZz6_M</string>

</resources>