<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/lbl_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/mi_examen_final"
      android:layout_marginTop="24dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:fontFamily="@font/indie_flower_regular"
      android:textColor="@color/white"
      android:textSize="48sp"
        />

  <EditText
      android:id="@+id/edt_user"
      android:background="@color/white"
      android:hint="@string/usuario"
      android:layout_marginTop="64dp"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:layout_marginLeft="48dp"
      android:layout_marginRight="48dp"
      android:paddingStart="10dp"
      android:paddingLeft="10dp"
      android:fontFamily="@font/indie_flower_regular"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lbl_title"
        />

  <EditText
      android:id="@+id/edt_pass"
      android:background="@color/white"
      android:hint="@string/password"
      android:layout_marginTop="64dp"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:layout_marginLeft="48dp"
      android:layout_marginRight="48dp"
      android:paddingStart="10dp"
      android:fontFamily="@font/indie_flower_regular"
      android:paddingLeft="10dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edt_user"
        />

  <Button
      android:id="@+id/btn_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="24sp"
      android:layout_marginTop="36dp"
      android:padding="16dp"
      android:background="@color/white"
      android:fontFamily="@font/indie_flower_regular"
      android:text="@string/iniciar_sesion"
      app:layout_constraintTop_toBottomOf="@id/edt_pass"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
        />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:src="@drawable/img_group_73"
      android:layout_marginTop="24dp"
      app:layout_constraintTop_toBottomOf="@id/btn_login"
      app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>